<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="channel_id">Downloads</string>
    <string name="channel_name">Downloads</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="select_radio_button">Select one of the options to start download</string>
    <string name="action_text">Show details</string>
    <string name="custom_download_source">Custom download source</string>
    <string name="download_failed">Fail</string>
    <string name="download_successful">Success</string>
    <string name="status">Status:</string>
    <string name="file_name">File name:</string>
    <string name="ok">OK</string>
</resources>
