<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.udacity.Download" />

        <variable
            name="viewModel"
            type="com.udacity.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">


        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:padding="24dp"
            app:layout_constraintDimensionRatio="h,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cloud_download_24"
            app:tint="@color/purple" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintTop_toBottomOf="@+id/main_image">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.select(Download.GLIDE)}"
                android:text="@string/glide" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.select(Download.UDACITY)}"
                android:text="@string/udacity" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.select(Download.RETROFIT)}"
                android:text="@string/retrofit" />
        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:onClick="@{()->viewModel.onClick()}"
            android:text="@string/button_name"
            android:textSize="@dimen/default_text_size"
            app:defaultAnimDuration="2000"
            app:defaultColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:ovalProgressColor="@color/colorAccent"
            app:progressColor="@color/colorPrimaryDark"
            app:progressText="@string/button_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>